# onto-service

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  本体平台设计方案V1.md
docs/: API.md  USER_GUIDE_BUSINESS.md
onto-service-cpp/: CMakeLists.txt
onto-service-cpp/include/onto/service/: ontology_analyzer.h  ontology_catalog.h  query_translator.h
onto-service-cpp/src/: ontology_analyzer.cc  ontology_catalog.cc  query_translator.cc
onto-service-cpp/tests/: CMakeLists.txt  test_ontology_analyzer.cc  test_ontology_catalog.cc  test_query_translator.cc
onto-service-java/: pom.xml
onto-service-java/src/main/resources/: application.yml
onto-service-java/src/main/resources/db/migration/: V1__init_schema.sql  V2__add_ontology_artifact.sql
onto-service-java/src/main/resources/static/: app.js  index.html  ontology-vis.html  ontology-vis.js
onto-service-java/src/test/resources/: application-test.yml
onto-service-python/: Dockerfile.python  requirements.txt
onto-service-python/onto_service/: __init__.py  main.py
onto-service-python/onto_service/embedding/: embedding_service.py  router.py
onto-service-python/onto_service/grounding/: grounding_service.py  router.py
onto-service-python/onto_service/llm/: llm_client.py
onto-service-python/tests/: test_embedding.py  test_grounding.py  test_llm.py
scripts/: e2e_demo.sh  init_doris.sh  init_tpch.sh  seed_neo4j.sh  seed_tbox.cypher  seed_tpch.cypher
sql/: 01_tbox_schema.sql  02_abox_schema.sql  03_hai_demo.sql  04_tpch_schema.sql
(+92 files in other folders)
